# SunBear

./: README.md  bluesky_feed.json  notates.py  notes-v0.2.0.md  notes.md  pyproject.toml  test.py
src/: DataBranch.py  Schema.py  utils.py
src/sunbear/: DataBranch.py  DataTree.py  __init__.py
tests/: test_aggregations.py  test_comprehensive.py  test_sunbear.py
